--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,48 @@
-h1 {
-    margin-left: 1rem;
+body{
+    background-color: aliceblue;
+}
+h1{
+    font-size: 3.5rem;
+    margin-left: 30px;
 }
 .container{
     max-width: 1100px;
     margin: 0 auto;
     font-size: 19px;
 }
-
+#searchInput{
+    margin-left: 29px;
+    width: 260px;
+    height: 46px;
+    border-radius: 1rem;
+}
 .results{
 display: flex;
 flex-wrap: wrap;
+max-width: 700px;
+margin-top: 45px;
 }
 
-.result{
-    margin: 1rem;
+.product{
+    margin: 2rem;
     padding: 1rem;
-    width: 100px;
-    height: 100px;
+    width: 234px;
+    height: 119px;
     background: turquoise;
     border-radius: 1rem;
     text-align: center;
+    border: 1px solid black;
 }
 .price{
-    margin: 1rem;
-    margin-left: 0.5px;
+    margin: 5rem;
+    margin-left: 124px;
     padding: 1rem;
-    width: 40px;
-    height: 18px;
-    background:yellow;
+    width: 56px;
+    height: 30px;
+    background: yellow;
     border-radius: 1rem;
     text-align: center;
+    border: 1px solid black;
 }
 
 
