--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ margin-top: 45px;
     border: 1px solid black;
 }
 .price{
+    font-size: 1.6rem;
     margin: 5rem;
     margin-left: 124px;
     padding: 1rem;
