--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     background-color: aliceblue;
 }
 h1{
-    font-size: 3.5rem;
+    font-size: 3rem;
     margin-left: 30px;
 }
 .container{
@@ -54,6 +54,23 @@ margin-top: 45px;
     width: 120px;
     height: 120px;
     animation: spin 4s linear infinite;
+}
+
+.message {
+    border: 1px solid pink;
+    color: grey;
+    margin-top: 1rem;
+    padding: 1rem;
+}
+
+.message.error {
+    border-color: red;
+    color: red;
+}
+
+.message.success {
+    border-color: green;
+    color: green;
 }
 
 @keyframes spin {
